--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="20">
       <tr>
         <Td> <img
-          src="Images/MustaV when he's kid   WA-modified.png"
+          src="MustaV when he's kid   WA-modified.png"
           alt="Photo of Someone Handsome"
           width="200" height="200"
         /></Td>
