--- a/Indexlvl2.html
+++ b/Indexlvl2.html
@@ -8,7 +8,7 @@
     <table cellspacing="20">
       <tr>
         <Td> <img
-          src="Images/Usif-modified.png"
+          src="Usif-modified.png"
           alt="Photo of Someone Handsome"
           width="200" height="200"
         />
