--- a/Indexlvl2.html
+++ b/Indexlvl2.html
@@ -58,7 +58,7 @@
       <li>Learn New Things</li>
       <li>
         Speaking with
-        <a href="Index.html"
+        <a href="index.html"
           ><em><strong>MustaV</strong></em></a
         >
       </li>
