--- a/FUCK.html
+++ b/FUCK.html
@@ -9,7 +9,7 @@
         <tr> 
             <td><img src="K7ba1.png" alt="k7ba" width="300" height="300"></td>
             <td><h1>MR Najlaa</h1> 
-                <p>he is the man who think he is woman but he's can't hurt Usif but Usif fuck him.</p></td>
+                <p>he is the man who think he is woman but he's can't hurt Usif becuase Usif fuck him.</p></td>
         </tr>
         <tr>
             <td>
